++Game starts in Main Menu, added show cursor in Main Menu Level

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/FoodWars.FoodWars
+GameDefaultMap=/Game/MainMenu.MainMenu
 EditorStartupMap=/Game/FoodWars.FoodWars
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
