++Mouse wheel now controlls Height, UE Project Settings, Settings

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -93,8 +93,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="InputAxis_right",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=1.000000,Key=ThumbMouseButton2)
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=-1.000000,Key=ThumbMouseButton)
-+AxisMappings=(AxisName="InputAxis_CameraUp",Scale=1.000000,Key=MouseScrollUp)
-+AxisMappings=(AxisName="InputAxis_CameraUp",Scale=-1.000000,Key=MouseScrollDown)
++AxisMappings=(AxisName="InputAxis_CameraUp",Scale=1.000000,Key=MouseWheelAxis)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
