--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -82,6 +82,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="InputAction_RotationLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="InputAction_ChangeTurn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
 +ActionMappings=(ActionName="IputAction_CamToPlayerCorner",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
++ActionMappings=(ActionName="InputAction_Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="InputAxis_Zoom",Scale=-1.000000,Key=MouseWheelAxis)
 +AxisMappings=(AxisName="InputAxis_Forward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="InputAxis_Forward",Scale=-1.000000,Key=S)
