++improved Fighting Charakter, simple Punching*, FightCharacter.cpp,  C++ & BP
* more like Body Checking

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,6 +83,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="InputAction_ChangeTurn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
 +ActionMappings=(ActionName="IputAction_CamToPlayerCorner",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
 +ActionMappings=(ActionName="InputAction_Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="InputAction_Punch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="InputAxis_Zoom",Scale=-1.000000,Key=MouseWheelAxis)
 +AxisMappings=(AxisName="InputAxis_Forward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="InputAxis_Forward",Scale=-1.000000,Key=S)
@@ -95,6 +96,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=1.000000,Key=ThumbMouseButton2)
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=-1.000000,Key=ThumbMouseButton)
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=1.000000,Key=MouseWheelAxis)
++AxisMappings=(AxisName="NewAxisMapping_0",Scale=1.000000,Key=None)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
