--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -84,6 +84,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="IputAction_CamToPlayerCorner",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
 +ActionMappings=(ActionName="InputAction_Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="InputAction_Punch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="InputAction_RotationRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightStick_Right)
++ActionMappings=(ActionName="InputAction_RotationLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightStick_Left)
 +AxisMappings=(AxisName="InputAxis_Zoom",Scale=-1.000000,Key=MouseWheelAxis)
 +AxisMappings=(AxisName="InputAxis_Forward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="InputAxis_Forward",Scale=-1.000000,Key=S)
@@ -97,6 +99,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=-1.000000,Key=ThumbMouseButton)
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=1.000000,Key=MouseWheelAxis)
 +AxisMappings=(AxisName="NewAxisMapping_0",Scale=1.000000,Key=None)
++AxisMappings=(AxisName="InputAxis_Forward",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="InputAxis_right",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="InputAxis_CameraUp",Scale=-1.000000,Key=Gamepad_LeftTrigger)
++AxisMappings=(AxisName="InputAxis_CameraUp",Scale=1.000000,Key=Gamepad_RightTrigger)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
