--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,6 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/MainMenu.MainMenu
 EditorStartupMap=/Game/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=None
@@ -13,7 +12,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/GameModes/CamSetUp.CamSetUp_C
+GlobalDefaultGameMode=/Game/Blueprints/GM_FPSGame.GM_FPSGame_C
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
