--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,18 +1,18 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/MainMenu.MainMenu
+EditorStartupMap=/Game/Development/MainMenu.MainMenu
 LocalMapOptions=
-TransitionMap=None
+TransitionMap=/Game/Development/MainMenu.MainMenu
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/MainMenu.MainMenu
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/GM_FPSGame.GM_FPSGame_C
+GameDefaultMap=/Game/Development/MainMenu.MainMenu
+ServerDefaultMap=/Game/Development/MainMenu.MainMenu
+GlobalDefaultGameMode=/Game/Robin/MainLevel/GM_MainMenu.GM_MainMenu_C
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
