--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -98,11 +98,12 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=1.000000,Key=ThumbMouseButton2)
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=-1.000000,Key=ThumbMouseButton)
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=1.000000,Key=MouseWheelAxis)
-+AxisMappings=(AxisName="NewAxisMapping_0",Scale=1.000000,Key=None)
++AxisMappings=(AxisName="InputAxis_MouseLookUp",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="InputAxis_Forward",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="InputAxis_right",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=-1.000000,Key=Gamepad_LeftTrigger)
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=1.000000,Key=Gamepad_RightTrigger)
++AxisMappings=(AxisName="InputAxis_MouseLookRight",Scale=1.000000,Key=MouseX)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
