--- a/FoodWars.uproject
+++ b/FoodWars.uproject
@@ -24,6 +24,10 @@
 		{
 			"Name": "SkeletalMeshModelingTools",
 			"Enabled": true
+		},
+		{
+			"Name": "NiagaraFluids",
+			"Enabled": true
 		}
 	]
 }
