--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -88,6 +88,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="InputAction_RotationLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightStick_Left)
 +ActionMappings=(ActionName="InputAction_Shooting",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Start",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
++ActionMappings=(ActionName="Start",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
 +AxisMappings=(AxisName="InputAxis_Zoom",Scale=-1.000000,Key=MouseWheelAxis)
 +AxisMappings=(AxisName="InputAxis_Forward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="InputAxis_Forward",Scale=-1.000000,Key=S)
