--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -106,11 +106,15 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=-1.000000,Key=ThumbMouseButton)
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=1.000000,Key=MouseWheelAxis)
 +AxisMappings=(AxisName="InputAxis_MouseLookUp",Scale=1.000000,Key=MouseY)
-+AxisMappings=(AxisName="InputAxis_Forward",Scale=1.000000,Key=Gamepad_LeftY)
-+AxisMappings=(AxisName="InputAxis_right",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="InputAxis_Forward",Scale=1.000000,Key=Gamepad_DPad_Up)
++AxisMappings=(AxisName="InputAxis_right",Scale=1.000000,Key=Gamepad_DPad_Right)
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=-1.000000,Key=Gamepad_LeftTrigger)
 +AxisMappings=(AxisName="InputAxis_CameraUp",Scale=1.000000,Key=Gamepad_RightTrigger)
 +AxisMappings=(AxisName="InputAxis_MouseLookRight",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="JoyY",Scale=-1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="JoyX",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="InputAxis_right",Scale=-1.000000,Key=Gamepad_DPad_Left)
++AxisMappings=(AxisName="InputAxis_Forward",Scale=-1.000000,Key=Gamepad_DPad_Down)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
