--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Development/GamingInstance.GamingInstance_C
 GameDefaultMap=/Game/Development/MainMenu.MainMenu
 ServerDefaultMap=/Game/Development/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Robin/MainLevel/GM_MainMenu.GM_MainMenu_C
