--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -93,6 +93,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MoveLeftInWidget",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Left)
 +ActionMappings=(ActionName="MoveRightInWidget",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Right)
 +ActionMappings=(ActionName="MoveLeftInWidget",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Left)
++ActionMappings=(ActionName="ControllerClick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="MouseClick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="InputAxis_Zoom",Scale=-1.000000,Key=MouseWheelAxis)
 +AxisMappings=(AxisName="InputAxis_Forward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="InputAxis_Forward",Scale=-1.000000,Key=S)
