--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 EditorStartupMap=/Game/Development/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=/Game/Development/MainMenu.MainMenu
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
