--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -206,8 +206,8 @@ FontDPIPreset=Standard
 FontDPI=72
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/FoodWars")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/FoodWars")
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/NomNomWars")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/NomNomWars")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
