Setting up Enhanced Input Mapping

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -87,8 +87,6 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="InputAction_RotationRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightStick_Right)
 +ActionMappings=(ActionName="InputAction_RotationLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightStick_Left)
 +ActionMappings=(ActionName="InputAction_Shooting",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="Start",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
-+ActionMappings=(ActionName="Start",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
 +ActionMappings=(ActionName="MoveRightInWidget",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Right)
 +ActionMappings=(ActionName="MoveLeftInWidget",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Left)
 +ActionMappings=(ActionName="MoveRightInWidget",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Right)
@@ -125,4 +123,17 @@ DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.Defaul
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 +ConsoleKeys=Caret
+
+[/Script/EnhancedInput.EnhancedInputDeveloperSettings]
++DefaultMappingContexts=(InputMappingContext="/Game/Development/Enhanced_Input_System/EI_Player_Input_Mapping.EI_Player_Input_Mapping",Priority=0)
+UserSettingsClass=/Script/EnhancedInput.EnhancedInputUserSettings
+DefaultPlayerMappableKeyProfileClass=/Script/EnhancedInput.EnhancedPlayerMappableKeyProfile
+DefaultWorldInputClass=/Script/EnhancedInput.EnhancedPlayerInput
+bSendTriggeredEventsWhenInputIsFlushed=True
+bEnableUserSettings=False
+EnhancedInput.EnableDefaultMappingContexts=True
+EnhancedInput.OnlyTriggerLastActionInChord=True
+bLogOnDeprecatedConfigUsed=True
+bEnableWorldSubsystem=False
+EnhancedInput.bShouldLogAllWorldSubsystemInputs=False
 
