++Added Prototype for Camera Cycle-Movement, CameraTest.cpp & BP_CameraTest, Cpp & BP

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Development/GamingInstance.GamingInstance_C
 GameDefaultMap=/Game/Development/MainMenu.MainMenu
 ServerDefaultMap=/Game/Development/MainMenu.MainMenu
-GlobalDefaultGameMode=/Game/Robin/MainLevel/GM_MainMenu.GM_MainMenu_C
+GlobalDefaultGameMode=/Game/Blueprints/CameraTest.CameraTest_C
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
